test/files/neg/parser-import-errors.check
parser-import-errors.scala:12: error: not found: type B1
    new B1
        ^
parser-import-errors.scala:13: error: not found: type C1
    new C1
        ^
parser-import-errors.scala:19: error: object X1 is not a member of package p1
  import p1.{ A1 => X1, X1 => A1 }
         ^
parser-import-errors.scala:21: error: not found: type A1
    new A1
        ^
parser-import-errors.scala:22: error: not found: type B1
    new B1
        ^
parser-import-errors.scala:23: error: not found: type C1
    new C1
        ^
parser-import-errors.scala:33: error: not found: type C1
    new C1
        ^
parser-import-errors.scala:38: error: A1 appears twice as a target of a renaming
  import p1.{ A1, B1 => A1 }
         ^
parser-import-errors.scala:45: error: object Z1 is not a member of package p1
  import p1.{ Z1, B1 => Z1 }
         ^
9 errors found
